# largest-spatiotemporal-lab

./: .dvcignore  .editorconfig  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  TEMPLATE_GUIDE.md  dvc.yaml  justfile  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: codeql.yml  dependency-audit.yml  docs-build.yml  dvc-check.yml  lint.yml  release.yml  tests.yml  type-check.yml
.woodpecker/: ci.yml
config/: README.md  config.yaml
config/data/: README.md
config/experiment/: README.md  debug.yaml
config/logging/: README.md  base.yaml
config/mlflow/: README.md  base.yaml
config/model/: README.md  base.yaml
config/trainer/: README.md  base.yaml  fast_dev.yaml
config/trainer/callbacks/: base.yaml
data/: README.md
data/interim/: README.md
data/processed/: README.md
data/raw/: .gitignore  README.md
deployment/: README.md
deployment/api/: README.md
deployment/api/app/: main.py
deployment/api/app/core/: logging.py  metrics.py  model.py
deployment/api/app/routers/: health.py  predict.py
deployment/api/app/schemas/: predict.py
deployment/dashboards/: README.md
deployment/dashboards/nicegui/: README.md  app.py
deployment/dashboards/streamlit/: README.md  app.py
deployment/docker/: .dockerignore  Dockerfile  README.md  docker-compose.yml
deployment/k8s/: README.md
deployment/k8s/base/: configmap.yaml  deployment.yaml  hpa.yaml  kustomization.yaml  service.yaml
deployment/k8s/helm/: Chart.yaml  values.yaml
deployment/k8s/helm/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  secret.yaml  service.yaml  serviceaccount.yaml
deployment/k8s/overlays/dev/: kustomization.yaml
deployment/k8s/overlays/prod/: kustomization.yaml
deployment/scripts/: README.md  promote_and_export_to_triton.py
deployment/triton/model_repo/: README.md
docs/: INSTRUCTIONS.md  README.md
docs/adr/: INSTRUCTIONS.md  README.md
docs/api/: INSTRUCTIONS.md  README.md
docs/design/: INSTRUCTIONS.md  README.md
docs/figures/: README.md
docs/references/: README.md
notebooks/: README.md
src/: README.md
src/spatiotemporal_lab/cli/: train.py
src/spatiotemporal_lab/data/: README.md  datamodule.py  factory.py  splits.py  transforms.py
src/spatiotemporal_lab/evaluation/: README.md  evaluate.py  metrics.py
src/spatiotemporal_lab/inference/: README.md  predictor.py
src/spatiotemporal_lab/integrations/: README.md  dvc.py  mlflow.py
src/spatiotemporal_lab/logging/: README.md  setup.py
src/spatiotemporal_lab/schemas/: README.md  common.py  requests.py  responses.py
src/spatiotemporal_lab/training/: README.md  loops.py
src/spatiotemporal_lab/utils/: README.md  paths.py
tests/: README.md
tests/integration/: README.md
tests/unit/: README.md  test_imports.py
tools/: README.md  data_check.py  release.py  repo_check.py  setup_notebooks.sh
